--- a/index.html
+++ b/index.html
@@ -405,8 +405,14 @@
             </section>
             <hr class="m-0" />
            
-            <!-- Awards-->
-           
+            <!-- Downloads-->
+                       <!-- downloads-->
+            <section class="resume-section" id="downloads">
+              <div class="resume-section-content ">
+                  <h2 class="mb-5">Downloads</h2>
+                <a href="assets/img/Resume_Naguib-Heiba.pdf" download class="btn btn btn-link"><i class="fas fa-file-pdf"></i> Download the resume in pdf form</a>
+</div>
+</section>
         </div>
         <!-- Bootstrap core JS-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
