--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                     <div class="social-icons">
                         <a class="social-icon" target="_blank" href="https://www.linkedin.com/in/naguib-heiba/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" target="_blank" href="https://www.xing.com/profile/MohamedNaguib_Heiba/cv"><i class="fab fa-xing"></i></a>
-                        <a class="social-icon" target="_blank" href="https://www.instagram.com/naguib.heiba/"><i class="fab fa-instagram"></i></a>
+                        <!--<a class="social-icon" target="_blank" href="https://www.instagram.com/naguib.heiba/"><i class="fab fa-instagram"></i></a>-->
                     </div>
                 </div>
             </section>
